# photo-redactor

./: CMakeLists.txt  CollageFilter.cpp  CollageFilter.h  CompressionFilter.cpp  CompressionFilter.h  CropFilter.cpp  CropFilter.h  EdgeDetectionFilter.cpp  EdgeDetectionFilter.h  Filter.h  GaussianBlurFilter.cpp  GaussianBlurFilter.h  GrayscaleFilter.cpp  GrayscaleFilter.h  Image.cpp  Image.h  MatrixFilter.cpp  MatrixFilter.h  NamespaceBMPImage.cpp  NamespaceBMPImage.h  NegativeFilter.cpp  NegativeFilter.h  Parsing.cpp  Parsing.h  PixelFilter.cpp  PixelFilter.h  Pixels.cpp  Pixels.h  Print.cpp  Print.h  ShadeFilter.cpp  ShadeFilter.h  SharpeningFilter.cpp  SharpeningFilter.h  image_processor.cpp
